errores.txt
yeremi@yeremi-VirtualBox:~/pr03cpp$ g++ -o Splay Splay.cpp
In file included from Node.cpp:3,
                 from Splay.cpp:4:
list.cpp: In instantiation of ‘void list<T>::insertar(T*) [with T = Node*]’:
Splay.cpp:137:44:   required from here
list.cpp:40:20: error: request for member ‘setNext’ in ‘*((list<Node*>*)this)->list<Node*>::apPrimero’, which is of pointer type ‘Node*’ (maybe you meant to use ‘->’ ?)
   40 |         apPrimero->setNext(nullptr);
      |         ~~~~~~~~~~~^~~~~~~
list.cpp:42:19: error: request for member ‘setNext’ in ‘*((list<Node*>*)this)->list<Node*>::apUltimo’, which is of pointer type ‘Node*’ (maybe you meant to use ‘->’ ?)
   42 |         apUltimo->setNext(pData);
      |         ~~~~~~~~~~^~~~~~~
